Kubernetes-confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: enadocapp.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - enadocapp.com   # Replace with your domain
      secretName: dotnet-app-tls
